fix(loading): the z-index default value is not set

--- a/style/web/components/loading/_index.less
+++ b/style/web/components/loading/_index.less
@@ -73,6 +73,7 @@
   left: 0;
   width: 100%;
   height: 100%;
+  z-index: @z-index-loading;
 }
 
 .@{prefix}-loading--hidden {
